--- a/Practicals/04_decision_trees/trees_and_forest.ipynb
+++ b/Practicals/04_decision_trees/trees_and_forest.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "58284c11",
    "metadata": {},
    "outputs": [],
@@ -131,10 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8aa3f35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows:      26557\n",
+      "Number of columns:   11\n"
+     ]
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "data_file = Path(\"../Data/weatherAUS.csv\")\n",
@@ -153,12 +162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b96d8634",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "změna\n"
+     ]
+    }
+   ],
    "source": [
-    "data.head()"
+    "data.head()\n",
+    "print(\"změna\")"
    ]
   },
   {
